# uwuwm

./: .gitignore  MISSING.md  Makefile  README.md  compile_commands.json  config.hpp  install.list  meson.build  patch.patch  rc.lua
lib/: .luarc.json
lib/examples/: bar_1.lua  bar_2.lua  bar_3.lua  bar_4.lua
lib/meta/: uwu.lua
lib/nyaa/: export.lua  init.lua  palettes.lua  wallpaper.lua
lib/paw/: init.lua
protocols/: wlr-output-power-management-unstable-v1.xml
scripts/: install-deps.sh  patch_wlroots_headers.py
src/: bar.cpp  bar.hpp  decoration.cpp  decoration.hpp  dwindle.cpp  dwindle.hpp  glib_loop.hpp  idle.cpp  idle.hpp  input.cpp  input.hpp  ipc.cpp  ipc.hpp  layershell.cpp  layershell.hpp  layout.cpp  layout.hpp  listener.hpp  lua_config.cpp  lua_config.hpp  main.cpp  output.cpp  output.hpp  popup.cpp  popup.hpp  qml_bar.cpp  qml_bar.hpp  qt_runtime.cpp  qt_runtime.hpp  server.cpp  server.hpp  session_lock.cpp  session_lock.hpp  text.cpp  text.hpp  toplevel.cpp  toplevel.hpp  utils.hpp  view.cpp  view.hpp  (+6 more)
wayland-sessions/: uwuwm.desktop
